--- a/data/town.yml
+++ b/data/town.yml
@@ -437,104 +437,7 @@ upgrades:
       require_structure: 's_library'
       category: 'Library'
     #Library Level 1 Enchantments
-    - id: 'research_looting_1'
-      name: 'Research Looting I'
-      action: 'enable_library_enchantment, Looting, 1, 50'
-      cost: 125.0
-      require_upgrade:
-      require_tech:
-      require_structure: 's_library'
-      category: 'Library'
-  
-    - id: 'research_looting_2'
-      name: 'Research Looting II'
-      action: 'enable_library_enchantment, Looting, 2, 250'
-      cost: 375.0
-      require_upgrade: 'upgrade_library_level_2'
-      require_tech:
-      require_structure: 's_library'
-      category: 'Library'
-
-    - id: 'research_efficiency_1'
-      name: 'Research Efficiency I'
-      action: 'enable_library_enchantment, Efficiency, 1, 15'
-      cost: 75.0
-      require_upgrade:
-      require_tech:
-      require_structure: 's_library'
-      category: 'Library'
-   
-    - id: 'research_efficiency_2'
-      name: 'Research Efficiency II'
-      action: 'enable_library_enchantment, Efficiency, 2, 75'
-      cost: 500.0
-      require_upgrade: 'upgrade_library_level_2'
-      require_tech:
-      require_structure: 's_library'
-      category: 'Library'
-   
-    - id: 'research_efficiency_3'
-      name: 'Research Efficiency III'
-      action: 'enable_library_enchantment, Efficiency, 3, 200'
-      cost: 875.0
-      require_upgrade: 'upgrade_library_level_3'
-      require_tech:
-      require_structure: 's_library'
-      category: 'Library'
-  
-    - id: 'research_efficiency_4'
-      name: 'Research Efficiency IV'
-      action: 'enable_library_enchantment, Efficiency, 4, 750'
-      cost: 2500.0
-      require_upgrade: 'upgrade_library_level_3'
-      require_tech:
-      require_structure: 's_library'
-      category: 'Library'
-  
-    - id: 'research_efficiency_5'
-      name: 'Research Efficiency V'
-      action: 'enable_library_enchantment, Efficiency, 5, 1500'
-      cost: 3750.0
-      require_upgrade: 'upgrade_library_level_4'
-      require_tech:
-      require_structure: 's_library'
-      category: 'Library'
-
-    - id: 'research_fortune_1'
-      name: 'Research Fortune I'
-      action: 'enable_library_enchantment, Fortune, 1, 750'
-      cost: 1500.0
-      require_upgrade: 'upgrade_library_level_2'
-      require_tech:
-      require_structure: 's_library'
-      category: 'Library'
-  
-    - id: 'research_silk_touch_1'
-      name: 'Research Silk Touch I'
-      action: 'enable_library_enchantment, Silk_Touch, 1, 1000'
-      cost: 2500.0
-      require_upgrade: 'upgrade_library_level_2'
-      require_tech:
-      require_structure: 's_library'
-      category: 'Library'
-    
-    - id: 'research_soulbound'
-      name: 'Research SoulBound'
-      action: 'enable_library_enchantment, LoreEnhancementSoulBound, 1, 30000'
-      cost: 2500.0
-      require_upgrade: 'upgrade_library_level_2'
-      require_tech:
-      require_structure: 's_library'
-      category: 'Library'
-
-    - id: 'research_feather_falling_1'
-      name: 'Research Feather Falling I'
-      action: 'enable_library_enchantment, Feather_Falling, 1, 1000'
-      cost: 2500.0
-      require_upgrade: 'upgrade_library_level_4'
-      require_tech:
-      require_structure: 's_library'
-      category: 'Library'
+    # COMING SOON
 # Grocer upgrades
     - id: 'upgrade_grocer_level_2'
       name: 'Upgrade Grocer Level 2'
