--- a/data/culture.yml
+++ b/data/culture.yml
@@ -69,14 +69,84 @@ culture_biomes:
  - name: DESERT_MOUNTAINS
    coins: 0.0
    growth: 0.1
-   hammers: 1.25
-   beakers: 1.25
+   hammers: 1.5
+   beakers: 1.0
    happiness: 0.015
 #
  - name: DESERT_HILLS
    coins: 0.0
    growth: 0.0
    hammers: 1.5
+   beakers: 1.0
+   happiness: 0.01
+#
+ - name: SAVANNA
+   coins: 0.0
+   growth: 0.5
+   hammers: 1.0
+   beakers: 0.75
+   happiness: 0.015
+#
+ - name: SAVANNA_MOUNTAINS
+   coins: 0.0
+   growth: 0.25
+   hammers: 1.5
+   beakers: 0.5
+   happiness: 0.01
+#
+ - name: SAVANNA_PLATEAU
+   coins: 0.0
+   growth: 0.25
+   hammers: 1.5
+   beakers: 0.75
+   happiness: 0.01
+#
+ - name: SAVANNA_PLATEAU_MOUNTAINS
+   coins: 0.0
+   growth: 0.0
+   hammers: 2.0
+   beakers: 0.25
+   happiness: 0.0
+#
+ - name: MESA
+   coins: 0.0
+   growth: 0.5
+   hammers: 1.5
+   beakers: 0.5
+   happiness: 0.005
+#
+ - name: MESA_BRYCE
+   coins: 0.0
+   growth: 3.5
+   hammers: 2.5
+   beakers: 0.75
+   happiness: 0.0
+#
+ - name: MESA_PLATEAU
+   coins: 0.0
+   growth: 0.0
+   hammers: 2.5
+   beakers: 0.25
+   happiness: 0.0
+#
+ - name: MESA_PLATEAU_MOUNTAINS
+   coins: 0.0
+   growth: 0.0
+   hammers: 3.5
+   beakers: 0.01
+   happiness: 0.0
+#
+ - name: MESA_PLATEAU_FOREST
+   coins: 0.0
+   growth: 0.5
+   hammers: 1.75
+   beakers: 0.75
+   happiness: 0.02
+#
+ - name: MESA_PLATEAU_FOREST_MOUNTAINS
+   coins: 0.0
+   growth: 0.0
+   hammers: 1.85
    beakers: 1.0
    happiness: 0.01
 #
@@ -106,10 +176,17 @@ culture_biomes:
 #
  - name: SWAMPLAND
    coins: 0.0
-   growth: 1.5
-   hammers: 0.5
+   growth: 1.25
+   hammers: 0.75
    beakers: 0.5
-   happiness: 0.015
+   happiness: 0.025
+#
+ - name: SWAMPLAND_MOUNTAINS
+   coins: 0.0
+   growth: 1.0
+   hammers: 2.0
+   beakers: 0.25
+   happiness: 0.01
 #
  - name: FOREST
    coins: 0.0
@@ -125,6 +202,90 @@ culture_biomes:
    beakers: 0.75
    happiness: 0.025
 #
+ - name: BIRCH_FOREST
+   coins: 0.0
+   growth: 0.75
+   hammers: 1.0
+   beakers: 1.0
+   happiness: 0.025
+#
+ - name: BIRCH_FOREST_HILLS
+   coins: 0.0
+   growth: 0.75
+   hammers: 1.5
+   beakers: 0.5
+   happiness: 0.02
+#
+ - name: BIRCH_FOREST_HILLS_MOUNTAINS
+   coins: 0.0
+   growth: 0.0
+   hammers: 3.25
+   beakers: 0.0
+   happiness: 0.001
+#
+ - name: BIRCH_FOREST_MOUNTAINS
+   coins: 0.0
+   growth: 0.25
+   hammers: 2.5
+   beakers: 0.25
+   happiness: 0.0
+#
+ - name: ROOFED_FOREST
+   coins: 0.0
+   growth: 1.0
+   hammers: 1.25
+   beakers: 1.0
+   happiness: 0.025
+#
+ - name: ROOFED_FOREST_MOUNTAINS
+   coins: 0.0
+   growth: 0.75
+   hammers: 1.5
+   beakers: 0.5
+   happiness: 0.015
+#
+ - name: FLOWER_FOREST
+   coins: 0.0
+   growth: 2.0
+   hammers: 0.75
+   beakers: 0.75
+   happiness: 0.05
+#
+ - name: JUNGLE
+   coins: 0.0
+   growth: 2.0
+   hammers: 0.5
+   beakers: 0.75
+   happiness: 0.015
+#
+ - name: JUNGLE_HILLS
+   coins: 0.0
+   growth: 1.5
+   hammers: 0.75
+   beakers: 0.5
+   happiness: 0.0
+#
+ - name: JUNGLE_MOUNTAINS
+   coins: 0.0
+   growth: 0.75
+   hammers: 1.75
+   beakers: 0.5
+   happiness: 0.01
+#
+ - name: JUNGLE_EDGE
+   coins: 0.0
+   growth: 1.25
+   hammers: 0.75
+   beakers: 0.75
+   happiness: 0.01
+#
+ - name: JUNGLE_EDGE_MOUNTAINS
+   coins: 0.0
+   growth: 0.75
+   hammers: 1.75
+   beakers: 0.5
+   happiness: 0.01
+#
 #====================================#
 #==========> Water Biomes <==========#
 #====================================#
@@ -135,6 +296,13 @@ culture_biomes:
    beakers: 1.0
    happiness: 0.02
 #
+ - name: DEEP_OCEAN
+   coins: 0.0
+   growth: 0.0
+   hammers: 0.45
+   beakers: 1.35
+   happiness: 0.015
+#
  - name: FROZEN_OCEAN
    coins: 0.0
    growth: 0.25
@@ -144,9 +312,9 @@ culture_biomes:
 #
  - name: RIVER
    coins: 0.0
-   growth: 4.0
+   growth: 3.5
    hammers: 0.25
-   beakers: 0.25
+   beakers: 1.0
    happiness: 0.05
 #
  - name: FROZEN_RIVER
@@ -177,15 +345,50 @@ culture_biomes:
    beakers: 1.0
    happiness: 0.04
 #
+ - name: STONE_BEACH
+   coins: 0.0
+   growth: 0.0
+   hammers: 2.0
+   beakers: 0.75
+   happiness: 0.015
+#
+ - name: COLD_BEACH
+   coins: 0.0
+   growth: 0.01
+   hammers: 1.5
+   beakers: 1.0
+   happiness: 0.02
+#
 #====================================#
 #===========> Cold Biomes <==========#
 #====================================#
  - name: EXTREME_HILLS
    coins: 0.0
+   growth: 0.5
+   hammers: 1.75
+   beakers: 0.25
+   happiness: 0.015
+#
+ - name: EXTREME_HILLS_MOUNTAINS
+   coins: 0.0
    growth: 0.25
-   hammers: 1.5
+   hammers: 2.0
+   beakers: 0.25
+   happiness: 0.01
+#
+ - name: EXTREME_HILLS_PLUS
+   coins: 0.0
+   growth: 0.0
+   hammers: 2.25
+   beakers: 0.25
+   happiness: 0.01
+#
+ - name: EXTREME_HILLS_PLUS_MOUNTAINS
+   coins: 0.0
+   growth: 0.25
+   hammers: 2.5
    beakers: 0.5
-   happiness: 0.02
+   happiness: 0.0
 #
  - name: TAIGA
    coins: 0.0
@@ -201,6 +404,41 @@ culture_biomes:
    beakers: 0.5
    happiness: 0.02
 #
+ - name: TAIGA_MOUNTAINS
+   coins: 0.0
+   growth: 0.0
+   hammers: 1.75
+   beakers: 0.25
+   happiness: 0.01
+#
+ - name: MEGA_TAIGA
+   coins: 0.0
+   growth: 0.5
+   hammers: 0.75
+   beakers: 1.25
+   happiness: 0.03
+#
+ - name: MEGA_TAIGA_HILLS
+   coins: 0.0
+   growth: 0.0
+   hammers: 1.25
+   beakers: 1.5
+   happiness: 0.01
+#
+ - name: MEGA_SPRUCE_TAIGA
+   coins: 0.0
+   growth: 1.25
+   hammers: 0.5
+   beakers: 0.5
+   happiness: 0.015
+#
+ - name: MEGA_SPRUCE_TAIGA_HILLS
+   coins: 0.0
+   growth: 1.0
+   hammers: 1.25
+   beakers: 0.25
+   happiness: 0.01
+#
  - name: SKY
    coins: 0.0
    growth: 0.5
@@ -211,6 +449,27 @@ culture_biomes:
 #====================================#
 #==========> Snowy Biomes <==========#
 #====================================#
+ - name: COLD_TAIGA
+   coins: 0.0
+   growth: 0.25
+   hammers: 1.0
+   beakers: 1.0
+   happiness: 0.01
+#
+ - name: COLD_TAIGA_HILLS
+   coins: 0.0
+   growth: 0.0
+   hammers: 0.75
+   beakers: 1.5
+   happiness: 0.0
+#
+ - name: COLD_TAIGA_MOUNTAINS
+   coins: 0.0
+   growth: 0.0
+   hammers: 0.5
+   beakers: 1.25
+   happiness: 0.01
+#
  - name: ICE_PLAINS
    coins: 0.0
    growth: 0.25
@@ -225,13 +484,19 @@ culture_biomes:
    beakers: 1.25
    happiness: 0.015
 #
+ - name: ICE_PLAINS_SPIKES
+   coins: 0.0
+   growth: 0.1
+   hammers: 0.5
+   beakers: 2.5
+   happiness: 0.0
+#
 #====================================#
 #==========> Other Biomes <==========#
 #====================================#
  - name: UNKNOWN
-   coins: 5.0
-   growth: 2.5
-   hammers: 2.5
-   beakers: 2.5
-   happiness: 1.0
-   happiness: 1.0
+   coins: 0.0
+   growth: 1.0
+   hammers: 1.0
+   beakers: 1.0
+   happiness: 0.01
