--- a/data/structures.yml
+++ b/data/structures.yml
@@ -24,13 +24,18 @@ quarry:
 trommel:
     technocracy_rate: 1.85
     penalty_rate: 0.9
+#Every Output (All Levels)
+trommel_global:
+    bronze: 0.01
+    steel: 0.005
+    titanium: 0.001
 #Cobblestone Input (Level 1)
 trommel_gravel:
     max: 10000
     iron: 0.05
     gold: 0.025
     diamond: 0.0075
-    emerald: 0.005
+    emerald: 0.0025
     redstone: 0.01
 #Stone Input (Level 1)
 trommel_dirt:
@@ -46,7 +51,7 @@ trommel_granite:
     iron: 0.075
     gold: 0.05
     diamond: 0.01
-    emerald: 0.0075
+    emerald: 0.005
     redstone: 0.015
 #Granite Input (Level 3)
 trommel_diorite:
@@ -54,7 +59,7 @@ trommel_diorite:
     iron: 0.075
     gold: 0.05
     diamond: 0.01
-    emerald: 0.0075
+    emerald: 0.005
     redstone: 0.015
 #Granite Input (Level 4)
 trommel_andesite:
@@ -62,7 +67,7 @@ trommel_andesite:
     iron: 0.075
     gold: 0.05
     diamond: 0.01
-    emerald: 0.0075
+    emerald: 0.005
     redstone: 0.015
 #=======================================================#
 #==================> Temple Settings <==================#
@@ -128,99 +133,143 @@ cottage_levels:
          - 297,1
          - 391,1
      count: 24
-     coins: 75.0
-
+     coins: 50.0
+#
    - level: 2
      consumes:
          - 297,2
          - 391,2
          - 392,1
      count: 48
-     coins: 150.0
-
+     coins: 100.0
+#
    - level: 3
      consumes:
-         - 297,2
+         - 297,3
          - 391,3
          - 392,2
-     count: 96
-     coins: 225.0
-
+     count: 72
+     coins: 150.0
+#
    - level: 4
      consumes:
-         - 297,3
-         - 391,4
+         - 297,4
+         - 391,3
          - 392,3
-     count: 120
-     coins: 300.0
-   
+     count: 96
+     coins: 200.0
+#
    - level: 5
      consumes:
-         - 297,4
-         - 391,5
-         - 392,4
-     count: 144
-     coins: 375.0
-
+         - 297,5
+         - 391,4
+         - 392,5
+     count: 120
+     coins: 250.0
+#
    - level: 6
      consumes:
-         - 297,5
+         - 297,6
          - 391,6
          - 392,6
-         - 319,1
-     count: 288
+         - 349,1
+     count: 144
+     coins: 300.0
+#
+   - level: 7
+     consumes:
+         - 297,6
+         - 391,6
+         - 392,6
+         - 349,3
+     count: 168
+     coins: 350.0
+#
+   - level: 8
+     consumes:
+         - 297,7
+         - 391,7
+         - 392,7
+         - 349,4
+         - 360,2
+         - 86,1
+     count: 192
+     coins: 400.0
+#
+   - level: 9
+     consumes:
+         - 297,8
+         - 391,8
+         - 392,8
+         - 349,6
+         - 360,4
+         - 86,2
+     count: 216
      coins: 450.0
+#
+   - level: 10
+     consumes:
+         - 297,10
+         - 391,10
+         - 392,10
+         - 349,8
+         - 360,6
+         - 86,3
+         - 354,1
+     count: 240
+     coins: 500.0
+#
 #=======================================================#
 #====================> Mine Levels <====================#
 #=======================================================#
 mine_levels:
     - level: 1
-      hammers: 50.0
+      hammers: 40.0
       amount: 2
       count: 24
 #
     - level: 2
-      hammers: 100.0
+      hammers: 80.0
       amount: 4
       count: 48
 #
     - level: 3
-      hammers: 150.0
+      hammers: 120.0
       amount: 6
       count: 72
 #
     - level: 4
-      hammers: 200.0
+      hammers: 160.0
       amount: 9
       count: 96
 #
     - level: 5
-      hammers: 250.0
+      hammers: 200.0
       amount: 11
       count: 120
 #
     - level: 6
-      hammers: 300.0
+      hammers: 240.0
       amount: 13
       count: 144
 #
     - level: 7
-      hammers: 350.0
+      hammers: 280.0
       amount: 16
       count: 168
 #
     - level: 8
-      hammers: 400.0
+      hammers: 320.0
       amount: 18
       count: 192
 #
     - level: 9
-      hammers: 450.0
+      hammers: 360.0
       amount: 20
       count: 216
 #
     - level: 10
-      hammers: 500.0
+      hammers: 400.0
       amount: 24
       count: 240
 #=======================================================#
@@ -228,52 +277,52 @@ mine_levels:
 #=======================================================#
 lab_levels:
     - level: 1
-      beakers: 50.0
+      beakers: 40.0
       amount: 2
       count: 24
 #
     - level: 2
-      beakers: 100.0
+      beakers: 80.0
       amount: 4
       count: 48
 #
     - level: 3
-      beakers: 150.0
+      beakers: 120.0
       amount: 6
       count: 72
 #
     - level: 4
-      beakers: 200.0
+      beakers: 160.0
       amount: 9
       count: 96
 #
     - level: 5
-      beakers: 250.0
+      beakers: 200.0
       amount: 11
       count: 120
 #
     - level: 6
-      beakers: 300.0
+      beakers: 240.0
       amount: 13
       count: 144
 #
     - level: 7
-      beakers: 350.0
+      beakers: 280.0
       amount: 16
       count: 168
 #
     - level: 8
-      beakers: 400.0
+      beakers: 320.0
       amount: 18
       count: 192
 #
     - level: 9
-      beakers: 450.0
+      beakers: 360.0
       amount: 20
       count: 216
 #
     - level: 10
-      beakers: 500.0
+      beakers: 400.0
       amount: 24
       count: 240
 #=======================================================#
@@ -291,7 +340,7 @@ windmill:
 #################### Pasture Settings #######################
 pasture:
     #Maximum amount of mobs for each type, per pasture
-    max_mobs: 30
+    max_mobs: 40
 ################### Barracks Settings #######################
 barracks:
     # Barracks repair cost uses the following formula.
@@ -308,14 +357,13 @@ barracks:
 
 
     # Base repair cost of all items
-    base_damage_repair: 500.0
-    base_tier_repair: 2000.0
+    base_damage_repair: 250.0
+    base_tier_repair: 1000.0
 
     # damage dampen. 
     damage_damp: 1.0
-
     # tier dampen
-    tier_damp: 0.175
+    tier_damp: 0.15
     
 
 #################### Stable Settings ########################
@@ -419,7 +467,7 @@ structures:
     template: town_hall
     template_y_shift: 0
     displayName: Town Hall
-    effect_event: generate_culture:1
+    effect_event: generate_culture:2
     limit: 2
     cost: 10000.0
     upkeep: 0.0
@@ -432,13 +480,13 @@ structures:
         - name: 'AttributeStatic'
           type: 'direct'
           attribute: 'CULTURE'
-          value: '1.0'
+          value: '2.0'
 #
   - id: s_capitol
     template: capital
     template_y_shift: 0
     displayName: Capitol
-    effect_event: generate_culture:2
+    effect_event: generate_culture:4
     limit: 2
     cost: 35000.0
     upkeep: 0.0
@@ -451,7 +499,7 @@ structures:
         - name: 'AttributeStatic'
           type: 'direct'
           attribute: 'CULTURE'
-          value: '2.0'
+          value: '4.0'
 #
   - id: s_arrowtower
     template: arrow_tower
@@ -635,6 +683,10 @@ structures:
           biomes: 'DEEP_OCEAN:2,OCEAN:2,RIVER:1,DESERT:1,MESA:1'
           base_value: '5.0'
         - name: 'ConsumeLevelComponent'
+        - name: 'AttributeStatic'
+          type: 'direct'
+          attribute: 'CULTURE'
+          value: '2.0'
 #
   - id: s_library
     template: library
@@ -712,7 +764,7 @@ structures:
         - name: 'AttributeStatic'
           type: 'direct'
           attribute: 'HAPPINESS'
-          value: '3.0'
+          value: '2.5'
         - name: 'AttributeStatic'
           type: 'direct'
           attribute: 'CULTURE'
@@ -841,7 +893,7 @@ structures:
         - name: 'AttributeStatic'
           type: 'direct'
           attribute: 'HAPPINESS'
-          value: '4.0'
+          value: '3.0'
 #
   - id: ti_trade_outpost
     template: trade_outpost
