--- a/data/town.yml
+++ b/data/town.yml
@@ -437,6 +437,126 @@ upgrades:
       require_structure: 's_library'
       category: 'Library'
     #Library Level 1 Enchantments
+    - id: 'research_looting_1'
+      name: 'Research Looting I'
+      action: 'enable_library_enchantment, Looting, 1, 25'
+      cost: 50.0
+      require_structure: 's_library'
+      category: 'Library'
+#
+    - id: 'research_efficiency_1'
+      name: 'Research Efficiency I'
+      action: 'enable_library_enchantment, Efficiency, 1, 25'
+      cost: 50.0
+      require_structure: 's_library'
+      category: 'Library'
+#
+    - id: 'research_lure_1'
+      name: 'Research Lure I'
+      action: 'enable_library_enchantment, Lure, 1, 250'
+      cost: 500.0
+      require_structure: 's_library'
+      category: 'Library'
+    #Library Level 2 Enchantments
+    - id: 'research_efficiency_2'
+      name: 'Research Efficiency II'
+      action: 'enable_library_enchantment, Efficiency, 2, 75'
+      cost: 150.0
+      require_upgrade: 'upgrade_library_level_2'
+      require_structure: 's_library'
+      category: 'Library'
+#
+    - id: 'research_feather_falling_1'
+      name: 'Research Feather Falling I'
+      action: 'enable_library_enchantment, Feather_Falling, 1, 1250'
+      cost: 2500.0
+      require_upgrade: 'upgrade_library_level_2'
+      require_structure: 's_library'
+      category: 'Library'
+#
+    - id: 'research_silk_touch'
+      name: 'Research Silk Touch'
+      action: 'enable_library_enchantment, Silk_Touch, 2, 500'
+      cost: 1000.0
+      require_upgrade: 'upgrade_library_level_2'
+      require_structure: 's_library'
+      category: 'Library'
+#
+    - id: 'research_silk_touch'
+      name: 'Research Silk Touch'
+      action: 'enable_library_enchantment, Silk_Touch, 1, 500'
+      cost: 1000.0
+      require_upgrade: 'upgrade_library_level_2'
+      require_structure: 's_library'
+      category: 'Library'
+#
+    #Library Level 3 Enchantments
+    - id: 'research_efficiency_3'
+      name: 'Research Efficiency III'
+      action: 'enable_library_enchantment, Efficiency, 3, 250'
+      cost: 500.0
+      require_upgrade: 'upgrade_library_level_3'
+      require_structure: 's_library'
+      category: 'Library'
+#
+    - id: 'research_lure_2'
+      name: 'Research Lure II'
+      action: 'enable_library_enchantment, Lure, 2, 1000'
+      cost: 2000.0
+      require_upgrade: 'upgrade_library_level_3'
+      require_structure: 's_library'
+      category: 'Library'
+#
+    - id: 'research_soulbound'
+      name: 'Research SoulBound'
+      action: 'enable_library_enchantment, LoreEnhancementSoulBound, 1, 25000'
+      cost: 50000.0
+      require_upgrade: 'upgrade_library_level_3'
+      require_tech:
+      require_structure: 's_library'
+      category: 'Library'
+#
+    - id: 'research_punchout_1'
+      name: 'Research Punchout I'
+      action: 'enable_library_enchantment, LoreEnhancementPunchoutI, 1, 40000'
+      cost: 80000.0
+      require_upgrade: 'upgrade_library_level_3'
+      require_tech:
+      require_structure: 's_library'
+      category: 'Library'
+    #Library Level 4 Enchantments
+    - id: 'research_looting_2'
+      name: 'Research Looting II'
+      action: 'enable_library_enchantment, Looting, 2, 250'
+      cost: 500.0
+      require_upgrade: 'upgrade_library_level_4'
+      require_structure: 's_library'
+      category: 'Library'
+#
+    - id: 'research_efficiency_4'
+      name: 'Research Efficiency IV'
+      action: 'enable_library_enchantment, Efficiency, 4, 750'
+      cost: 1500.0
+      require_upgrade: 'upgrade_library_level_4'
+      require_structure: 's_library'
+      category: 'Library'
+#
+    - id: 'research_efficiency_5'
+      name: 'Research Efficiency V'
+      action: 'enable_library_enchantment, Efficiency, 5, 2500'
+      cost: 5000.0
+      require_upgrade: 'research_efficiency_4'
+      require_structure: 's_library'
+      category: 'Library'
+#
+    - id: 'research_feather_falling_2'
+      name: 'Research Feather Falling II'
+      action: 'enable_library_enchantment, Feather_Falling, 2, 2500'
+      cost: 5000.0
+      require_upgrade: 'upgrade_library_level_4'
+      require_structure: 's_library'
+      category: 'Library'
+#
     # COMING SOON
 # Grocer upgrades
     - id: 'upgrade_grocer_level_2'
